parser.output
Grammar

    0 $accept: formula $end

    1 formula: terms

    2 terms: NEG term connective terms
    3      | term connective terms
    4      | term connective '(' terms ')'
    5      | '(' terms ')' connective term
    6      | term
    7      | NEG term

    8 term: predicate_term
    9     | type_term
   10     | param_term
   11     | quantified_term
   12     | event_term
   13     | grammar_term
   14     | KEYWORD_TRUEP
   15     | IDENTIFIER EQUAL IDENTIFIER

   16 connective: AND
   17           | EQUIV
   18           | IMPLY
   19           | OR

   20 grammar_term: TAG '(' arguments ')'

   21 type_term: KEYWORD_TYPE '{' TAG '}' '(' arguments ')'

   22 param_term: KEYWORD_PARAM '{' TAG '}' '(' arguments ')'

   23 predicate_term: PREDICATE '{' TAG '}' '(' arguments ')'
   24               | PREDICATE '{' TAG '}' '(' '(' terms ')' ')'

   25 arguments: arguments COMMA argument
   26          | argument

   27 argument: IDENTIFIER
   28         | terms

   29 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

   30 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' terms ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' <t> (40) 4 5 20 21 22 23 24 29 30
    ')' <t> (41) 4 5 20 21 22 23 24 29 30
    '.' <t> (46) 30
    '{' <t> (123) 21 22 23 24
    '}' <t> (125) 21 22 23 24
    error (256)
    PREDICATE <t> (258) 23 24
    IDENTIFIER <t> (259) 15 27 29 30
    KEYWORD_TRUEP <t> (260) 14
    NEG <t> (261) 2 7
    COMMA <t> (262) 25
    EQUAL <t> (263) 15 29
    AND <t> (264) 16
    OR <t> (265) 19
    IMPLY <t> (266) 18
    EQUIV <t> (267) 17
    KEYWORD_QUANTIFIER <t> (268) 30
    KEYWORD_TYPE <t> (269) 21
    KEYWORD_PARAM <t> (270) 22
    TAG <t> (271) 20 21 22 23 24
    EVENT <t> (272) 29


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    formula (24)
        on left: 1
        on right: 0
    terms <node> (25)
        on left: 2 3 4 5 6 7
        on right: 1 2 3 4 5 24 28 30
    term <node> (26)
        on left: 8 9 10 11 12 13 14 15
        on right: 2 3 4 5 6 7
    connective <conntype> (27)
        on left: 16 17 18 19
        on right: 2 3 4 5
    grammar_term <node> (28)
        on left: 20
        on right: 13
    type_term <node> (29)
        on left: 21
        on right: 9
    param_term <node> (30)
        on left: 22
        on right: 10
    predicate_term <node> (31)
        on left: 23 24
        on right: 8
    arguments <nodelist> (32)
        on left: 25 26
        on right: 20 21 22 23 25
    argument <node> (33)
        on left: 27 28
        on right: 25 26
    event_term <node> (34)
        on left: 29
        on right: 12
    quantified_term <node> (35)
        on left: 30
        on right: 11


State 0

    0 $accept: • formula $end

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    formula          go to state 10
    terms            go to state 11
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 1

   23 predicate_term: PREDICATE • '{' TAG '}' '(' arguments ')'
   24               | PREDICATE • '{' TAG '}' '(' '(' terms ')' ')'

    '{'  shift, and go to state 19


State 2

   15 term: IDENTIFIER • EQUAL IDENTIFIER

    EQUAL  shift, and go to state 20


State 3

   14 term: KEYWORD_TRUEP •

    $default  reduce using rule 14 (term)


State 4

    2 terms: NEG • term connective terms
    7      | NEG • term

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    '('                 shift, and go to state 21
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    term             go to state 22
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 5

    5 terms: '(' • terms ')' connective term
   29 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9
    EVENT               shift, and go to state 23

    terms            go to state 24
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 6

   30 quantified_term: KEYWORD_QUANTIFIER • IDENTIFIER '.' '(' terms ')'

    IDENTIFIER  shift, and go to state 25


State 7

   21 type_term: KEYWORD_TYPE • '{' TAG '}' '(' arguments ')'

    '{'  shift, and go to state 26


State 8

   22 param_term: KEYWORD_PARAM • '{' TAG '}' '(' arguments ')'

    '{'  shift, and go to state 27


State 9

   20 grammar_term: TAG • '(' arguments ')'

    '('  shift, and go to state 28


State 10

    0 $accept: formula • $end

    $end  shift, and go to state 29


State 11

    1 formula: terms •

    $default  reduce using rule 1 (formula)


State 12

    3 terms: term • connective terms
    4      | term • connective '(' terms ')'
    6      | term •

    AND    shift, and go to state 30
    OR     shift, and go to state 31
    IMPLY  shift, and go to state 32
    EQUIV  shift, and go to state 33

    $default  reduce using rule 6 (terms)

    connective  go to state 34


State 13

   13 term: grammar_term •

    $default  reduce using rule 13 (term)


State 14

    9 term: type_term •

    $default  reduce using rule 9 (term)


State 15

   10 term: param_term •

    $default  reduce using rule 10 (term)


State 16

    8 term: predicate_term •

    $default  reduce using rule 8 (term)


State 17

   12 term: event_term •

    $default  reduce using rule 12 (term)


State 18

   11 term: quantified_term •

    $default  reduce using rule 11 (term)


State 19

   23 predicate_term: PREDICATE '{' • TAG '}' '(' arguments ')'
   24               | PREDICATE '{' • TAG '}' '(' '(' terms ')' ')'

    TAG  shift, and go to state 35


State 20

   15 term: IDENTIFIER EQUAL • IDENTIFIER

    IDENTIFIER  shift, and go to state 36


State 21

   29 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    EVENT  shift, and go to state 23


State 22

    2 terms: NEG term • connective terms
    7      | NEG term •

    AND    shift, and go to state 30
    OR     shift, and go to state 31
    IMPLY  shift, and go to state 32
    EQUIV  shift, and go to state 33

    $default  reduce using rule 7 (terms)

    connective  go to state 37


State 23

   29 event_term: '(' EVENT • '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    '('  shift, and go to state 38


State 24

    5 terms: '(' terms • ')' connective term

    ')'  shift, and go to state 39


State 25

   30 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER • '.' '(' terms ')'

    '.'  shift, and go to state 40


State 26

   21 type_term: KEYWORD_TYPE '{' • TAG '}' '(' arguments ')'

    TAG  shift, and go to state 41


State 27

   22 param_term: KEYWORD_PARAM '{' • TAG '}' '(' arguments ')'

    TAG  shift, and go to state 42


State 28

   20 grammar_term: TAG '(' • arguments ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 43
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 44
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    arguments        go to state 45
    argument         go to state 46
    event_term       go to state 17
    quantified_term  go to state 18


State 29

    0 $accept: formula $end •

    $default  accept


State 30

   16 connective: AND •

    $default  reduce using rule 16 (connective)


State 31

   19 connective: OR •

    $default  reduce using rule 19 (connective)


State 32

   18 connective: IMPLY •

    $default  reduce using rule 18 (connective)


State 33

   17 connective: EQUIV •

    $default  reduce using rule 17 (connective)


State 34

    3 terms: term connective • terms
    4      | term connective • '(' terms ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 47
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 48
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 35

   23 predicate_term: PREDICATE '{' TAG • '}' '(' arguments ')'
   24               | PREDICATE '{' TAG • '}' '(' '(' terms ')' ')'

    '}'  shift, and go to state 49


State 36

   15 term: IDENTIFIER EQUAL IDENTIFIER •

    $default  reduce using rule 15 (term)


State 37

    2 terms: NEG term connective • terms

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 50
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 38

   29 event_term: '(' EVENT '(' • IDENTIFIER ')' EQUAL IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 51


State 39

    5 terms: '(' terms ')' • connective term

    AND    shift, and go to state 30
    OR     shift, and go to state 31
    IMPLY  shift, and go to state 32
    EQUIV  shift, and go to state 33

    connective  go to state 52


State 40

   30 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' • '(' terms ')'

    '('  shift, and go to state 53


State 41

   21 type_term: KEYWORD_TYPE '{' TAG • '}' '(' arguments ')'

    '}'  shift, and go to state 54


State 42

   22 param_term: KEYWORD_PARAM '{' TAG • '}' '(' arguments ')'

    '}'  shift, and go to state 55


State 43

   15 term: IDENTIFIER • EQUAL IDENTIFIER
   27 argument: IDENTIFIER •

    EQUAL  shift, and go to state 20

    $default  reduce using rule 27 (argument)


State 44

   28 argument: terms •

    $default  reduce using rule 28 (argument)


State 45

   20 grammar_term: TAG '(' arguments • ')'
   25 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 56
    ')'    shift, and go to state 57


State 46

   26 arguments: argument •

    $default  reduce using rule 26 (arguments)


State 47

    4 terms: term connective '(' • terms ')'
    5      | '(' • terms ')' connective term
   29 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9
    EVENT               shift, and go to state 23

    terms            go to state 58
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 48

    3 terms: term connective terms •

    $default  reduce using rule 3 (terms)


State 49

   23 predicate_term: PREDICATE '{' TAG '}' • '(' arguments ')'
   24               | PREDICATE '{' TAG '}' • '(' '(' terms ')' ')'

    '('  shift, and go to state 59


State 50

    2 terms: NEG term connective terms •

    $default  reduce using rule 2 (terms)


State 51

   29 event_term: '(' EVENT '(' IDENTIFIER • ')' EQUAL IDENTIFIER ')'

    ')'  shift, and go to state 60


State 52

    5 terms: '(' terms ')' connective • term

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    '('                 shift, and go to state 21
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    term             go to state 61
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 53

   30 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' • terms ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 62
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 54

   21 type_term: KEYWORD_TYPE '{' TAG '}' • '(' arguments ')'

    '('  shift, and go to state 63


State 55

   22 param_term: KEYWORD_PARAM '{' TAG '}' • '(' arguments ')'

    '('  shift, and go to state 64


State 56

   25 arguments: arguments COMMA • argument

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 43
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 44
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    argument         go to state 65
    event_term       go to state 17
    quantified_term  go to state 18


State 57

   20 grammar_term: TAG '(' arguments ')' •

    $default  reduce using rule 20 (grammar_term)


State 58

    4 terms: term connective '(' terms • ')'
    5      | '(' terms • ')' connective term

    ')'  shift, and go to state 66


State 59

   23 predicate_term: PREDICATE '{' TAG '}' '(' • arguments ')'
   24               | PREDICATE '{' TAG '}' '(' • '(' terms ')' ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 43
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 67
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 44
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    arguments        go to state 68
    argument         go to state 46
    event_term       go to state 17
    quantified_term  go to state 18


State 60

   29 event_term: '(' EVENT '(' IDENTIFIER ')' • EQUAL IDENTIFIER ')'

    EQUAL  shift, and go to state 69


State 61

    5 terms: '(' terms ')' connective term •

    $default  reduce using rule 5 (terms)


State 62

   30 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' terms • ')'

    ')'  shift, and go to state 70


State 63

   21 type_term: KEYWORD_TYPE '{' TAG '}' '(' • arguments ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 43
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 44
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    arguments        go to state 71
    argument         go to state 46
    event_term       go to state 17
    quantified_term  go to state 18


State 64

   22 param_term: KEYWORD_PARAM '{' TAG '}' '(' • arguments ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 43
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 44
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    arguments        go to state 72
    argument         go to state 46
    event_term       go to state 17
    quantified_term  go to state 18


State 65

   25 arguments: arguments COMMA argument •

    $default  reduce using rule 25 (arguments)


State 66

    4 terms: term connective '(' terms ')' •
    5      | '(' terms ')' • connective term

    AND    shift, and go to state 30
    OR     shift, and go to state 31
    IMPLY  shift, and go to state 32
    EQUIV  shift, and go to state 33

    $default  reduce using rule 4 (terms)

    connective  go to state 52


State 67

    5 terms: '(' • terms ')' connective term
   24 predicate_term: PREDICATE '{' TAG '}' '(' '(' • terms ')' ')'
   29 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9
    EVENT               shift, and go to state 23

    terms            go to state 73
    term             go to state 12
    grammar_term     go to state 13
    type_term        go to state 14
    param_term       go to state 15
    predicate_term   go to state 16
    event_term       go to state 17
    quantified_term  go to state 18


State 68

   23 predicate_term: PREDICATE '{' TAG '}' '(' arguments • ')'
   25 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 56
    ')'    shift, and go to state 74


State 69

   29 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL • IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 75


State 70

   30 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' terms ')' •

    $default  reduce using rule 30 (quantified_term)


State 71

   21 type_term: KEYWORD_TYPE '{' TAG '}' '(' arguments • ')'
   25 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 56
    ')'    shift, and go to state 76


State 72

   22 param_term: KEYWORD_PARAM '{' TAG '}' '(' arguments • ')'
   25 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 56
    ')'    shift, and go to state 77


State 73

    5 terms: '(' terms • ')' connective term
   24 predicate_term: PREDICATE '{' TAG '}' '(' '(' terms • ')' ')'

    ')'  shift, and go to state 78


State 74

   23 predicate_term: PREDICATE '{' TAG '}' '(' arguments ')' •

    $default  reduce using rule 23 (predicate_term)


State 75

   29 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER • ')'

    ')'  shift, and go to state 79


State 76

   21 type_term: KEYWORD_TYPE '{' TAG '}' '(' arguments ')' •

    $default  reduce using rule 21 (type_term)


State 77

   22 param_term: KEYWORD_PARAM '{' TAG '}' '(' arguments ')' •

    $default  reduce using rule 22 (param_term)


State 78

    5 terms: '(' terms ')' • connective term
   24 predicate_term: PREDICATE '{' TAG '}' '(' '(' terms ')' • ')'

    ')'    shift, and go to state 80
    AND    shift, and go to state 30
    OR     shift, and go to state 31
    IMPLY  shift, and go to state 32
    EQUIV  shift, and go to state 33

    connective  go to state 52


State 79

   29 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')' •

    $default  reduce using rule 29 (event_term)


State 80

   24 predicate_term: PREDICATE '{' TAG '}' '(' '(' terms ')' ')' •

    $default  reduce using rule 24 (predicate_term)
